objects/Service_Sheet_STD__c/fields/FA_Spare_Parts_Emergency_Lights_QTY__c.field-meta.xml
<CustomField>
    <fullName>FA_Spare_Parts_Emergency_Lights_QTY__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>