objects/Service_Sheet_STD__c/fields/FA_STD_Detector_Calibration__c.field-meta.xml
<CustomField>
    <fullName>FA_STD_Detector_Calibration__c</fullName>
    <label>Detector Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>