objects/Service_Sheet_STD__c/fields/FA_X4_6_8FT_Tube__c.field-meta.xml
<CustomField>
    <fullName>FA_X4_6_8FT_Tube__c</fullName>
    <label>4,6,8FT Tube</label>
    <length>20</length>
    <type>Text</type>
</CustomField>