objects/Service_Sheet_STD__c/fields/Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comments__c</fullName>
    <description>Feedback Comments for the service</description>
    <label>Feedback Comments</label>
    <type>TextArea</type>
</CustomField>