objects/Service_Sheet_STD__c/fields/Fusible_Links__c.field-meta.xml
<CustomField>
    <fullName>Fusible_Links__c</fullName>
    <label>Fusible Links</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>