objects/Service_Sheet_STD__c/fields/Glass_Detector_Qty__c.field-meta.xml
<CustomField>
    <fullName>Glass_Detector_Qty__c</fullName>
    <label>Glass Detector Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>