objects/Service_Sheet_STD__c/fields/Housingsp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Housingsp_Qty__c</fullName>
    <label>Housing Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>