objects/Service_Sheet_STD__c/fields/HYD_LCI_Leather_Strap__c.field-meta.xml
<CustomField>
    <fullName>HYD_LCI_Leather_Strap__c</fullName>
    <label>LCI Leather Strap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>