objects/Service_Sheet_STD__c/fields/HYD_Outlet_Sign_BS5499__c.field-meta.xml
<CustomField>
    <fullName>HYD_Outlet_Sign_BS5499__c</fullName>
    <label>Outlet Sign BS5499</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>