objects/Service_Sheet_STD__c/fields/Interlink_Integrity_Qty__c.field-meta.xml
<CustomField>
    <fullName>Interlink_Integrity_Qty__c</fullName>
    <label>Interlink Integrity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>