objects/Service_Sheet_STD__c/fields/Invoice_email_to__c.field-meta.xml
<CustomField>
    <fullName>Invoice_email_to__c</fullName>
    <formula>IF(Site__r.Invoice_Email_To__c &lt;&gt; &quot;&quot;, Site__r.Invoice_Email_To__c, Site__r.Parent.Invoice_Email_To__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice email to</label>
    <type>Text</type>
</CustomField>