objects/Service_Sheet_STD__c/fields/Is_this_a_Bourne_Leisure_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Bourne_Leisure_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a Bourne Leisure Account?</label>
    <type>Checkbox</type>
</CustomField>