objects/Service_Sheet_STD__c/fields/JobTime__c.field-meta.xml
<CustomField>
    <fullName>JobTime__c</fullName>
    <formula>(floor((End_Date_and_Time__c - Start_Date_and_Time__c)*24))
+
(((((End_Date_and_Time__c - Start_Date_and_Time__c)*24)-floor((End_Date_and_Time__c - Start_Date_and_Time__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JobTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>