objects/Service_Sheet_STD__c/fields/Kettle_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Kettle_Replacement__c</fullName>
    <label>Kettle Replacement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>