objects/Service_Sheet_STD__c/fields/Lead_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_URL__c</fullName>
    <label>Lead URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>