objects/Service_Sheet_STD__c/fields/Levels_correct__c.field-meta.xml
<CustomField>
    <fullName>Levels_correct__c</fullName>
    <label>Levels correct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>