objects/Service_Sheet_STD__c/fields/Linked_MSS_Count__c.field-meta.xml
<CustomField>
    <fullName>Linked_MSS_Count__c</fullName>
    <label>Linked MSS Count</label>
    <summaryForeignKey>Linked_Maintenance_Sheet__c.Maintenance_Reactive_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>