objects/Service_Sheet_STD__c/fields/Locationn__c.field-meta.xml
<CustomField>
    <fullName>Locationn__c</fullName>
    <formula>Visit__r.Asset__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>