objects/Service_Sheet_STD__c/fields/Log_Book_Supplied_Qty__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Supplied_Qty__c</fullName>
    <label>Log Book Supplied - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>