objects/Service_Sheet_STD__c/fields/Machine_installed_and_connected_to_netwo__c.field-meta.xml
<CustomField>
    <fullName>Machine_installed_and_connected_to_netwo__c</fullName>
    <label>Machine installed and connected to netwo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>