objects/Service_Sheet_STD__c/fields/Maglocksp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Maglocksp_Qty__c</fullName>
    <label>Maglock Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>