objects/Service_Sheet_STD__c/fields/Maintenance_Sheet_No__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Sheet_No__c</fullName>
    <displayFormat>SS8{00000}</displayFormat>
    <label>Sheet No</label>
    <type>AutoNumber</type>
</CustomField>