objects/Service_Sheet_STD__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fire Door</fullName>
            </value>
            <value>
                <fullName>Nurse Call</fullName>
            </value>
            <value>
                <fullName>Portable Appliance Testing</fullName>
            </value>
            <value>
                <fullName>Smoke Vent / Curtain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>