objects/Service_Sheet_STD__c/fields/Mechanical_Friction_Inhib_Qty__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Friction_Inhib_Qty__c</fullName>
    <label>Mechanical Friction Inhib. Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>