objects/Service_Sheet_STD__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <formula>IF ( TEXT ( Visit__r.Call_Out_Types__c ) = &quot;Small Works&quot;, &quot;Small Works&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will hold any formulaed warnings or messages to the technician or reactive team from the visit, site contract, site or parent.</inlineHelpText>
    <label>Message</label>
    <type>Text</type>
</CustomField>