objects/Service_Sheet_STD__c/fields/Microwave_Leakage_Detection__c.field-meta.xml
<CustomField>
    <fullName>Microwave_Leakage_Detection__c</fullName>
    <label>Microwave Leakage Detection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>