objects/Service_Sheet_STD__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Service Call Date</label>
    <type>Date</type>
</CustomField>