objects/Service_Sheet_STD__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <label>Originator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>