objects/Service_Sheet_STD__c/fields/OtherFA__c.field-meta.xml
<CustomField>
    <fullName>OtherFA__c</fullName>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>