objects/Service_Sheet_STD__c/fields/Parking_Costs__c.field-meta.xml
<CustomField>
    <fullName>Parking_Costs__c</fullName>
    <label>Parking Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>