objects/Service_Sheet_STD__c/fields/Part_6__c.field-meta.xml
<CustomField>
    <fullName>Part_6__c</fullName>
    <label>Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>