objects/Service_Sheet_STD__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(Site_Contract__r.Contact_Site_Contracts__r.Phone!=null,Site_Contract__r.Contact_Site_Contracts__r.Phone,IF(Site__r.Phone!=null,Site__r.Phone,Site__r.Parent.Phone))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Telephone</label>
    <type>Text</type>
</CustomField>