objects/Service_Sheet_STD__c/fields/Pipe_Sealant_Clamp__c.field-meta.xml
<CustomField>
    <fullName>Pipe_Sealant_Clamp__c</fullName>
    <label>Pipe Sealant Clamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>