objects/Service_Sheet_STD__c/fields/PIR_Qty__c.field-meta.xml
<CustomField>
    <fullName>PIR_Qty__c</fullName>
    <label>PIR Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>