objects/Service_Sheet_STD__c/fields/Portable_Appliance_Testing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Portable_Appliance_Testing_Quantity__c</fullName>
    <label>Portable Appliance Testing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>