objects/Service_Sheet_STD__c/fields/PreviewSheetNo__c.field-meta.xml
<CustomField>
    <fullName>PreviewSheetNo__c</fullName>
    <formula>IF( RecordType.Name=&apos;Maintenance Sheet&apos;,Maintenance_Sheet_No__c ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in certificate layout</inlineHelpText>
    <label>PreviewSheetNo</label>
    <type>Text</type>
</CustomField>