objects/Service_Sheet_STD__c/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <formula>Site_Contract__r.Price_Book_IdFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBookId</label>
    <type>Text</type>
</CustomField>