objects/Service_Sheet_STD__c/fields/Proxi_Readersp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Proxi_Readersp_Qty__c</fullName>
    <label>Proxi Reader Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>