objects/Service_Sheet_STD__c/fields/QTY_Additional_EL_Tube__c.field-meta.xml
<CustomField>
    <fullName>QTY_Additional_EL_Tube__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>