objects/Service_Sheet_STD__c/fields/QtyFA__c.field-meta.xml
<CustomField>
    <fullName>QtyFA__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>