objects/Service_Sheet_STD__c/fields/Quantity_5__c.field-meta.xml
<CustomField>
    <fullName>Quantity_5__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>