objects/Service_Sheet_STD__c/fields/RatingSymbol__c.field-meta.xml
<CustomField>
    <fullName>RatingSymbol__c</fullName>
    <label>RatingSymbol</label>
    <length>13</length>
    <type>Text</type>
</CustomField>