objects/Service_Sheet_STD__c/fields/Re_Visit_Required__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Required__c</fullName>
    <label>Re-Visit Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>