objects/Service_Sheet_STD__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <formula>TEXT(Visit__r.Visit_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason For Visit</label>
    <type>Text</type>
</CustomField>