objects/Service_Sheet_STD__c/fields/Regulator_set_at__c.field-meta.xml
<CustomField>
    <fullName>Regulator_set_at__c</fullName>
    <label>Regulator set at</label>
    <length>40</length>
    <type>Text</type>
</CustomField>