objects/Service_Sheet_STD__c/fields/Replacement_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Gauge__c</fullName>
    <label>Replacement Gauge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>