objects/Service_Sheet_STD__c/fields/Return_Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Visit_Reason__c</fullName>
    <label>Return Visit Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>