objects/Service_Sheet_STD__c/fields/Rubber_Nozzle_Caps__c.field-meta.xml
<CustomField>
    <fullName>Rubber_Nozzle_Caps__c</fullName>
    <label>Rubber Nozzle Caps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>