objects/Service_Sheet_STD__c/fields/Service_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Service_Recommendations__c</fullName>
    <label>Technician Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>