objects/Service_Sheet_STD__c/fields/Sheets_Type__c.field-meta.xml
<CustomField>
    <fullName>Sheets_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sheets Type</label>
    <type>Text</type>
</CustomField>