objects/Service_Sheet_STD__c/fields/Shielding_sufficient__c.field-meta.xml
<CustomField>
    <fullName>Shielding_sufficient__c</fullName>
    <label>Shielding sufficient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>