objects/Service_Sheet_STD__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Sheets_STD</relationshipName>
    <type>Lookup</type>
</CustomField>