objects/Service_Sheet_STD__c/fields/Site_Contract__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Relates to the contract which will cover this service sheet</inlineHelpText>
    <label>Site Contract</label>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipName>Reactive_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>