objects/Service_Sheet_STD__c/fields/Site_Visit_Details_Comments__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Details_Comments__c</fullName>
    <label>Site Visit Details/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>