objects/Service_Sheet_STD__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Dry Riser</fullName>
            </value>
            <value>
                <fullName>Emergency Lighting</fullName>
            </value>
            <value>
                <fullName>Fire Alarm</fullName>
            </value>
            <value>
                <fullName>Fire Door</fullName>
            </value>
            <value>
                <fullName>Fire Extinguisher</fullName>
            </value>
            <value>
                <fullName>Fire Suppression</fullName>
            </value>
            <value>
                <fullName>Hydrant</fullName>
            </value>
            <value>
                <fullName>Intruder Alarm</fullName>
            </value>
            <value>
                <fullName>Nurse Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PAT</fullName>
            </value>
            <value>
                <fullName>Smoke Vent</fullName>
            </value>
            <value>
                <fullName>Sprinkler</fullName>
            </value>
            <value>
                <fullName>Vesda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>