objects/Service_Sheet_STD__c/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <formula>Technician__r.Engineer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Id</label>
    <type>Text</type>
</CustomField>