objects/Service_Sheet_STD__c/fields/Technician_Namee__c.field-meta.xml
<CustomField>
    <fullName>Technician_Namee__c</fullName>
    <formula>Technician__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Name</label>
    <type>Text</type>
</CustomField>