objects/Service_Sheet_STD__c/fields/Technicians_Revist_Email__c.field-meta.xml
<CustomField>
    <fullName>Technicians_Revist_Email__c</fullName>
    <defaultValue>&quot;technician.revisits@hentland.com&quot;</defaultValue>
    <description>this should be off the page and is used to facilitate the revisit email to technician.revisit@hentland.com</description>
    <inlineHelpText>this should be off the page and is used to facilitate the revisit email to technician.revisit@hentland.com</inlineHelpText>
    <label>Technicians Revist Email</label>
    <type>Email</type>
</CustomField>