objects/Service_Sheet_STD__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>test</label>
    <type>DateTime</type>
</CustomField>