objects/Service_Sheet_STD__c/fields/Toaster_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Toaster_Replacement__c</fullName>
    <label>Toaster Replacement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>