objects/Service_Sheet_STD__c/fields/Track_Linked_Mss__c.field-meta.xml
<CustomField>
    <fullName>Track_Linked_Mss__c</fullName>
    <label>Track Linked Mss</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>