objects/Service_Sheet_STD__c/fields/Travel_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Hours__c</fullName>
    <formula>(floor((Arrive__c - Depart__c)*24)) 
+ 
(((((Arrive__c - Depart__c)*24)-floor((Arrive__c- Depart__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time on Site</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>