objects/Service_Sheet_STD__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipName>Service_Sheets_STD</relationshipName>
    <type>Lookup</type>
</CustomField>