objects/Service_Sheet_STD__c/fields/X4_6_8W_Tube__c.field-meta.xml
<CustomField>
    <fullName>X4_6_8W_Tube__c</fullName>
    <label>EL Tube</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 Watt Tube rep</fullName>
            </value>
            <value>
                <fullName>6 Watt Tube rep.</fullName>
            </value>
            <value>
                <fullName>8 Watt Tube rep.</fullName>
            </value>
            <value>
                <fullName>2D Lamp/Biax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>