objects/Service_Sheet_STD__c/fields/X6L_Water_New_Equipment_Left_On_Site__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_New_Equipment_Left_On_Site__c</fullName>
    <label>New Equipment Left On-Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>