objects/Service_Sheet_STD__c/recordTypes/Maintenance_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Sheet</fullName>
    <active>false</active>
    <label>Maintenance Sheet</label>
</RecordType>