objects/Service_Sheet_STD__c/recordTypes/Reactive_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Reactive_Sheet</fullName>
    <active>true</active>
    <label>Reactive Sheet</label>
</RecordType>